--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,16 +1,18 @@
 cmake_minimum_required(VERSION 3.16)
 project(Aarambam C)
 
-# --- Compiler: use mpicc like the Makefile ---
-# You can also pass -DCMAKE_C_COMPILER=... on the cmake command line.
-if(NOT CMAKE_C_COMPILER)
-  set(CMAKE_C_COMPILER "/software/openmpi-4.1.0-el8-x86_64/bin/mpicc")
+# --- Compiler: use mpicc ---
+if(DEFINED ENV{Aarambam_CC})
+  set(CMAKE_C_COMPILER $ENV{Aarambam_CC} CACHE FILEPATH "C compiler" FORCE)
+else()
+  find_program(MPI_C_COMPILER NAMES mpicc REQUIRED)
+  set(CMAKE_C_COMPILER ${MPI_C_COMPILER} CACHE FILEPATH "MPI C compiler" FORCE)
 endif()
 
 # --- Match Makefile flags: -O3 -Wall and GNU extensions (like drand48, M_PI) ---
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
-set(CMAKE_C_EXTENSIONS ON)           # => gnu99, like GCC default used by the Makefile
+set(CMAKE_C_EXTENSIONS ON)           # => gnu99, like GCC default in 2LPTPNG
 add_compile_options(-O3 -Wall -g)
 
 # --- Sources (OBJS without .o) ---
@@ -29,17 +31,69 @@ add_executable(2LPTBasis
   ${SRC_DIR}/nrsrc/trapzd.c
 )
 
-# --- Include paths (CFLAGS part) ---
+# --- Include paths ---
 # GSL
-target_include_directories(2LPTBasis PRIVATE
-  /software/gsl-2.7-el8-x86_64/include
-)
-# FFTW2 (use THEPATH env var exactly like your Makefile)
-if(DEFINED ENV{THEPATH})
-  target_include_directories(2LPTBasis PRIVATE
-    $ENV{THEPATH}/FFTW/fftw-2.1.5/build/include
+if(DEFINED ENV{Aarambam_GSL_ROOT})
+  set(GSL_INCLUDE_DIR "$ENV{Aarambam_GSL_ROOT}/include" CACHE PATH "GSL include directory" FORCE)
+else()
+  if(DEFINED ENV{GSL_DIR})
+    set(_GSL_HINT $ENV{GSL_DIR})
+  elseif(DEFINED ENV{GSL_ROOT})
+    set(_GSL_HINT $ENV{GSL_ROOT})
+  endif()
+
+  find_path(GSL_INCLUDE_DIR
+    NAMES        gsl/gsl_math.h
+    HINTS        ${_GSL_HINT}
+    PATH_SUFFIXES include
   )
 endif()
+target_include_directories(2LPTBasis PRIVATE ${GSL_INCLUDE_DIR})
+set(GSL_LIB_DIR "${GSL_INCLUDE_DIR}/../lib" CACHE PATH "GSL library directory" FORCE)
+
+# FFTW2
+if(DEFINED ENV{Aarambam_FFTW2_ROOT})
+  set(_FFTW2_HINT "$ENV{Aarambam_FFTW2_ROOT}")
+else()
+  message(FATAL_ERROR "Environment variable Aarambam_FFTW2_ROOT must be set to your FFTW2 install/build root")
+endif()
+
+find_path(FFTW2_INCLUDE_DIR
+  NAMES        dfftw.h
+  HINTS        ${_FFTW2_HINT}
+  PATH_SUFFIXES include
+  REQUIRED
+)
+target_include_directories(2LPTBasis PRIVATE ${FFTW2_INCLUDE_DIR})
+
+find_library(_FFTW2_LIB
+  NAMES        fftw  dfftw
+  HINTS        ${_FFTW2_HINT}
+  PATH_SUFFIXES lib
+  REQUIRED
+)
+get_filename_component(FFTW2_LIB_DIR ${_FFTW2_LIB} DIRECTORY)
+
+# MPI
+if(DEFINED ENV{Aarambam_OPENMPI_ROOT})
+  set(OPENMPI_LIB_DIR "$ENV{Aarambam_OPENMPI_ROOT}/lib" CACHE PATH "OpenMPI library directory" FORCE)
+else()
+  # split the colon‐delimited env vars into a CMake list and combine
+  string(REPLACE ":" ";" _LD_PATHS  $ENV{LD_LIBRARY_PATH})
+  string(REPLACE ":" ";" _LIB_PATHS $ENV{LIBRARY_PATH})
+  list(APPEND _SEARCH_PATHS ${_LD_PATHS} ${_LIB_PATHS})
+
+  # look for libmpi.so (or .dylib/.a) on your LD_LIBRARY_PATH or LIBRARY_PATH
+  find_library(OPENMPI_MPI_LIB
+    NAMES mpi
+    PATHS ${_SEARCH_PATHS}
+    REQUIRED
+  )
+
+  # strip off the filename to get the lib directory
+  get_filename_component(OPENMPI_LIB_DIR ${OPENMPI_MPI_LIB} DIRECTORY)
+endif()
+
 # Local headers
 target_include_directories(2LPTBasis PRIVATE
   ${SRC_DIR}
@@ -54,26 +108,15 @@ target_compile_definitions(2LPTBasis PRIVATE
   # PRODUCEGAS=1   # uncomment if you want this default ON
   # ONLY_ZA=1      # uncomment if you want this default ON
 )
-# Optional “MODE” passthrough (you can pass -DMODE="-DSOMETHING" to cmake)  
-if(DEFINED MODE AND NOT MODE STREQUAL "")
-  # MODE is expected to be something like "-DSOMEFLAG"
-  target_compile_options(2LPTBasis PRIVATE ${MODE})
-endif()
 
 # --- Link directories (LIBS part: -L...) ---
 target_link_directories(2LPTBasis PRIVATE
-  /software/openmpi-4.1.0-el8-x86_64/lib
-  /software/gsl-2.7-el8-x86_64/lib
+  ${OPENMPI_LIB_DIR}
+  ${GSL_LIB_DIR}
+  ${FFTW2_LIB_DIR}
 )
-if(DEFINED ENV{THEPATH})
-  target_link_directories(2LPTBasis PRIVATE
-    $ENV{THEPATH}/FFTW/fftw-2.1.5/build/lib
-  )
-endif()
 
-# --- Link libraries (order matches your Makefile) ---
-#   LIBS = -lm  $(MPICHLIB)  $(FFTW_LIB)  $(GSL_LIBS)  -lgsl -lgslcblas
-#   $(FFTW_LIB) expands to: -L... -ldrfftw_mpi -ldfftw_mpi -ldrfftw -ldfftw
+# --- Link libraries ---
 target_link_libraries(2LPTBasis PRIVATE
   m
   mpi
@@ -82,11 +125,8 @@ target_link_libraries(2LPTBasis PRIVATE
 )
 install(TARGETS 2LPTBasis RUNTIME DESTINATION Aarambam/bin)
 
-# You can `cmake --build . --target clean` for cleaning; no manual 'clean' needed.
-
 
 # ─── CMB-BEST Python Extension ──────────────────────────────────────────────
-# requires: CMake >= 3.18 (for Python3_add_library), Cython & numpy in your build env
 
 find_package(Python3 REQUIRED COMPONENTS Interpreter Development.Module NumPy)
 find_package(OpenMP)  # for -fopenmp
