New command line utils

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ authors = [{ name = "You" }]
 
 [project.scripts]
 Aarambam-2LPT-Basis = "Aarambam.LPT.Basis.cli:main"
+Aarambam-camb2input = "Aarambam.bin.camb2input:main"
+Aarambam-collate-potential   = "Aarambam.bin.collate_potential:main"
+Aarambam-make-example-config = "Aarambam.bin.make_example_config:main"
 
 [tool.scikit-build]
 # helpful verbosity and wheel tweaks
